Try to fix Play button on mobile.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -707,3 +707,7 @@ iframe{
   margin-top: 3.5em;
   text-transform: uppercase;
 }
+
+#playBut{
+  z-index: 1000;
+}
